--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="quadrant_one">#FFEADDFF</color>
+    <color name="quadrant_two">#FFD0BCFF</color>
+    <color name="quadrant_three">#FFB69DF8</color>
+    <color name="quadrant_four">#FFF6EDFF</color>
 </resources>
